--- a/ERPWeb/Views/ControlPanel/_GetUsers.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetUsers.cshtml
@@ -135,6 +135,11 @@
                                 }
                             </td>
                         }
+                        @if (user.RoleId !=29 && user.RoleId !=30 && user.RoleId != 31 && user.RoleId !=32 && user.RoleId != 33 && user.RoleId != 34)
+                        {
+                            <td>N/A</td>
+
+                        }
 
 
 
