--- a/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
@@ -19,11 +19,19 @@
             <div class="card-header p-0 pt-1 border-bottom-0">
 
                 <ul class="nav nav-tabs nav-pills" id="custom-tabs-two-tab" role="tablist">
+
+
+
+
                     <li class="nav-item">
                         <a class="nav-link active" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Raw Material Issue list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Create Raw Material Issue</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Issue Stock</a>
                     </li>
                 </ul>
 
@@ -195,6 +203,54 @@
                 </div>
 
 
+                @*stock*@
+                <div class="tab-pane fade show active" id="custom-tabs-two-pstockrawmaterialqty" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialqty-tab">
+                    <div class="row" style="margin-top:-15px">
+                        <div class="col-md-12">
+                            <div class="card shadow card-gray-dark">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card card-navy shadow">
+                                <div class="card-header">
+                                    <div class="row text-sm">
+                                        <div class="col-md-2">
+                                            <h4>Search by:</h4>
+                                        </div>
+                                        <div class="col-md-3 float-right">
+                                            <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
+
+                                        </div>
+                                        <div class="col-7">
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12" style="margin-top:-10px">
+                            <div class="card ">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-12 text-sm text-sm" id="dataContainer3" style="overflow-y:scroll">
+                                            @*@{Html.RenderAction("GetPRawmaterialStockList", new { @flag = "Initial" });}*@
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                @*stock*@
+
+
             </div>
 
         </div>
@@ -216,6 +272,20 @@
     </div>
 </div>
 
+<div class="modal fade" id="IssueStockDetails" role="dialog" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header alert-secondary">
+                <h4 id="modalHeading" class="modal-title">Raw Material Issue Details</h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body" id="dataContainer3">
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
 @section scripts{
     <script type="text/javascript">
@@ -228,6 +298,8 @@
         var ddlUnitID = $("#ddlUnitID");
         var ddlRawMaterialList = [];
         var searchByAny = $("#searchByAny");
+
+        var searchByAnyy = $("#searchByAnyy");
 
         var RawMaterialStockQty = $("#RawMaterialStockQty");
 
@@ -244,6 +316,7 @@
             $("#btnSubmit").hide();
 
             LoadDataTable();
+            LoadDataTableStock();
         })
 
 
@@ -292,6 +365,13 @@
             LoadDataTable()
         })
 
+        //src2
+        searchByAnyy.keyup(function () {
+            LoadDataTableStock()
+        })
+
+
+
         //load
         function LoadDataTable() {
             //debugger;
@@ -305,6 +385,7 @@
                         $("#dataContainer").empty();
                         $("#dataContainer").append(res).fadeIn('500');
                     });
+
                 }
             }).fail(function (error) {
                 console.log(error);
@@ -312,6 +393,28 @@
             //pageNo = 1;
         }
 
+
+
+        //loads
+        function LoadDataTableStock() {
+            debugger;
+
+            var data = { flag: "Direct", name: $.trim(searchByAnyy.val()) };
+
+            $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetMRawmaterialIssueList', data)).then(function (res, status) {
+                console.log(status);
+                if (status === "success") {
+                    $("#dataContainer3").fadeOut('500', function () {
+                        $("#dataContainer3").empty();
+                        $("#dataContainer3").append(res).fadeIn('500');
+                    });
+                }
+            }).fail(function (error) {
+                console.log(error);
+            });
+            //pageNo = 1;
+        }
+         //loads
 
         //add
         $("#addTolist").click(function (e) {
