--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Purchase And Stock</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
+                    </li>
                 </ul>
 
             </div>
@@ -261,6 +264,54 @@
                 </div>
 
 
+                @*stock*@
+                <div class="tab-pane fade show active" id="custom-tabs-two-pstockrawmaterialqty" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialqty-tab">
+                    <div class="row" style="margin-top:-15px">
+                        <div class="col-md-12">
+                            <div class="card shadow card-gray-dark">
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card card-navy shadow">
+                                <div class="card-header">
+                                    <div class="row text-sm">
+                                        <div class="col-md-2">
+                                            <h4>Search by:</h4>
+                                        </div>
+                                        <div class="col-md-3 float-right">
+                                            <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
+
+                                        </div>
+                                        <div class="col-7">
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12" style="margin-top:-10px">
+                            <div class="card ">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-12 text-sm text-sm" id="dataContainer3" style="overflow-y:scroll">
+                                            @*@{Html.RenderAction("GetPRawmaterialStockList", new { @flag = "Initial" });}*@
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                @*stock*@
+
+
             </div>
 
         </div>
@@ -282,6 +333,20 @@
     </div>
 </div>
 
+
+<div class="modal fade" id="PurchaseStock" role="dialog" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header alert-secondary">
+                <h4 id="modalHeading" class="modal-title">Raw Material Stock Details</h4>
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body" id="dataContainer3">
+
+            </div>
+        </div>
+    </div>
+</div>
 
 @section scripts{
 
@@ -328,6 +393,7 @@
             $("#btnSubmit").hide();
 
             LoadDataTable();
+            LoadDataTableStock();
         })
 
         function LoadDataInitializer() {
@@ -337,6 +403,11 @@
 
         searchByAny.keyup(function () {
             LoadDataTable()
+        })
+
+        //src2
+        searchByAnyy.keyup(function () {
+            LoadDataTableStock()
         })
 
         //load
@@ -359,6 +430,27 @@
             //pageNo = 1;
         }
 
+
+        //loads
+        function LoadDataTableStock() {
+            debugger;
+
+            var data = { flag: "Direct", name: $.trim(searchByAnyy.val()) };
+
+            $.when(getReqWithData('html', 'GET', '/AgroConfiguration/GetPRawmaterialStockList', data)).then(function (res, status) {
+                console.log(status);
+                if (status === "success") {
+                    $("#dataContainer3").fadeOut('500', function () {
+                        $("#dataContainer3").empty();
+                        $("#dataContainer3").append(res).fadeIn('500');
+                    });
+                }
+            }).fail(function (error) {
+                console.log(error);
+            });
+            //pageNo = 1;
+        }
+         //loads
 
 
         //details
