--- a/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMRawmaterialIssueList.cshtml
@@ -20,19 +20,17 @@
 
                 <ul class="nav nav-tabs nav-pills" id="custom-tabs-two-tab" role="tablist">
 
-
-
-
                     <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Raw Material Issue list</a>
+                        <a class="nav-link active" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Issue Stock</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Raw Material Issue list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Create Raw Material Issue</a>
                     </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Issue Stock</a>
-                    </li>
+
                 </ul>
 
             </div>
@@ -40,8 +38,8 @@
 
         <div class="card-body shadow">
             <div class="tab-content" id="custom-tabs-two-tabContent">
-
-                <div class="tab-pane fade show active" id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
+                @Html.AntiForgeryToken()
+                <div class="tab-pane fade" id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
                     <div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             <div class="card shadow card-gray-dark">
@@ -140,9 +138,9 @@
                                                             </div>
 
                                                             @*<div class="col-md-1">
-                                                                    <label for="ddlrmnqty">Remain Qty</label>
-                                                                    <input type="text" id="ddlrmnqty" name="ddlrmnqty" class="form-control form-control-sm" readonly />
-                                                                </div>*@
+                                                        <label for="ddlrmnqty">Remain Qty</label>
+                                                        <input type="text" id="ddlrmnqty" name="ddlrmnqty" class="form-control form-control-sm" readonly />
+                                                    </div>*@
                                                             <div class="col-md-1">
                                                                 <label for="ddlqty"> Qty</label>
                                                                 <input type="number" id="ddlqty" name="qty" class="form-control form-control-sm" />
@@ -272,7 +270,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="IssueStockDetails" role="dialog" tabindex="-1" aria-hidden="true">
+@*<div class="modal fade" id="IssueStockDetails" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header alert-secondary">
@@ -284,7 +282,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 
 @section scripts{
@@ -315,6 +313,7 @@
             });
             $("#btnSubmit").hide();
 
+            LoadDataTableStock();
             LoadDataTable();
           
         })
@@ -526,13 +525,13 @@
 
 
         //click
-        $("#custom-tabs-two-pstockrawmaterialqty-tab").click(function (e) {
+        //$("#custom-tabs-two-pstockrawmaterialqty-tab").click(function (e) {
 
-            alert();
-            debugger;
-            e.preventDefault();
-            LoadDataTableStock();
-        })
+        //    alert();
+        //    debugger;
+        //    e.preventDefault();
+        //    LoadDataTableStock();
+        //})
 
         //save
         $("#saveButton").click(function (e) {
