--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -19,14 +19,15 @@
 
                 <ul class="nav nav-tabs nav-pills" id="custom-tabs-two-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase & Stock Raw Material list</a>
+                        <a class="nav-link active" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase & Stock Raw Material list</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Purchase And Stock</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
-                    </li>
+
                 </ul>
 
             </div>
@@ -35,7 +36,7 @@
         <div class="card-body shadow">
             <div class="tab-content" id="custom-tabs-two-tabContent">
 
-                <div class="tab-pane fade show active" id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
+                <div class="tab-pane fade show " id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
                     <div class="row" style="margin-top:-15px">
                         <div class="col-md-12">
                             <div class="card shadow card-gray-dark">
@@ -334,19 +335,6 @@
 </div>
 
 
-<div class="modal fade" id="PurchaseStock" role="dialog" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header alert-secondary">
-                <h4 id="modalHeading" class="modal-title">Raw Material Stock Details</h4>
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-            </div>
-            <div class="modal-body" id="dataContainer3">
-
-            </div>
-        </div>
-    </div>
-</div>
 
 @section scripts{
 
@@ -374,6 +362,7 @@
         var ddlUnitID = $("#ddlUnitID");
         var ddlRawMaterialList = [];
         var searchByAny = $("#searchByAny");
+        var searchByAnyy = $("#searchByAnyy");
 
 
 
@@ -394,6 +383,7 @@
 
             LoadDataTable();
             LoadDataTableStock();
+          
         })
 
         function LoadDataInitializer() {
@@ -409,6 +399,9 @@
         searchByAnyy.keyup(function () {
             LoadDataTableStock()
         })
+
+
+
 
         //load
         function LoadDataTable() {
