--- a/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetRequisition.cshtml
@@ -1,7 +1,158 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "GetRequisition";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>GetRequisition</h2>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card shadow card-primary card-outline card-tabs" style="margin-top:-20px">
+            <div class="card-body shadow">
+                @Html.AntiForgeryToken()
+                <div class="row" style="margin-top:-15px">
+                    <div class="col-md-12">
+                        <div class="card shadow card-gray-dark">
+                            <div class="card-header shadow">
+                                <div class="row">
+                                    <div class="col-md-3">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h5 class="text-center text-bold">
+                                            Raw Material Requsition List
+                                        </h5>
+                                    </div>
+                                    <div class="col-md-3">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12" style="margin-top:-15px">
+                        <div class="card shadow card-navy">
+                            <div class="card-body text-sm">
+                                <div class="row text-sm">
+                                    <div class="col-md-4">
+                                        <label for="txtReqCode" class="control-label font-weight-bold">Requisition Code</label>
+                                        <input type="text" name="search" id="txtReqCode" class="form-control form-control-sm" placeholder="Search By Requisition Code" onkeyup="tableFilter('#tblReqInfoData tbody tr',this)" />
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label class="control-label font-weight-bold">From Date</label>
+                                        <div class="input-group input-group-sm ">
+                                            <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" />
+                                            <div class="input-group-prepend cursor-pointer remove-date dptFromDate" style="cursor:pointer">
+                                                <span class="input-group-text">&#10008;</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <label class="control-label font-weight-bold">To Date</label>
+                                        <div class="input-group input-group-sm ">
+                                            <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" />
+                                            <div class="input-group-prepend remove-date dptToDate" style="cursor:pointer">
+                                                <span class="input-group-text">&#10008;</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12" style="margin-top:-10px">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-12 text-sm" id="dataContainer">
+                                            @*@{Html.RenderAction("");}*@
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+</div>
+
+<div class="row">
+    <div class="modal fade" id="modalRequsition" role="dialog" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header alert-secondary" style="height:60px">
+                    @Html.AntiForgeryToken()
+                    <input type="hidden" id="hdfRequsitionDetailId" />
+                    <input type="hidden" id="hdfRowIndex" />
+                    <h4 id="modalHeading" class="modal-title">
+                        Requsition  Details
+                    </h4>
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body" id="dataContainer2">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+@section scripts{
+
+    <script type="text/javascript">
+
+        var dptFromDate = $("#dptFromDate");
+        var dptToDate = $("#dptToDate");
+        $(document).ready(function () {
+
+            //Initialize Select2 Elements
+            $('.select2').select2();
+
+            //Initialize Select2 Elements
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            });
+            dptFromDate.prop('readonly', true);
+            dptToDate.prop('readonly', true);
+            dptFromDate.prop('readonly', true);
+            dptToDate.prop('readonly', true);
+            dptFromDate.css("background-color", "#fff");
+            dptToDate.css("background-color", "#fff");
+            dptFromDate.css("background-color", "#fff");
+            dptToDate.css("background-color", "#fff");
+            $('#dptFromDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true,
+                autoclose: true
+            });
+            $('#dptToDate').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true,
+                autoclose: true
+            });
+            $('#dptFromDate2').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true,
+                autoclose: true
+            });
+            $('#dptToDate2').datepicker({
+                format: "dd MM yyyy",
+                orientation: "bottom auto",
+                todayHighlight: true,
+                autoclose: true
+            });
+        })
+
+
+        function ModalOpen() {
+            $("#modalRequsition").Modal("show")
+
+        }
+
+    </script>
+
+
+
+}
