--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -61,10 +61,8 @@
         </a>*@
 
                     <a href="@Url.Action("AgroProductSalesReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Report"><i class="fas fa-file-pdf"></i></a>
-                    
 
-
-
+                    <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Report"><i class="fas fa-file-invoice"></i></a>
 
 
 
