--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -32,7 +32,7 @@
                                             </div>
                                             <div class="col-md-3">
 
-                                                <a href="/AgroConfiguration/CreateAgroSalesProduct" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Raw Material Return</a>
+                                                <a href="/AgroConfiguration/CreateRawMaterialReturnList" class="btn btn-outline-primary btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i> Create Raw Material Return</a>
 
                                             </div>
                                         </div>
@@ -48,19 +48,26 @@
                                     </div>
                                     <div class="card-body text-sm">
                                         <div class="row" style="margin-top:-15px">
-                                            <div class="col-md-3">
-                                                <label for="ddlRawmaterialName" class="col-form-label">Raw material Name</label>
-                                                @Html.DropDownList("ddlRawmaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawmaterialName, "--Select Raw material Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                                            </div>
-                                            <div class="col-md-3">
-                                                <label for="ddlReturnType" class="control-label">Return Type</label>
-                                                <select id="ddlReturnType" class="form-control form-control-sm" readonly>
-                                                    <option value="">Select Return Type</option>
-                                                    <option value="Good">Good</option>
-                                                    <option value="Damage">Damage</option>
-                                                </select>
+                                            @*<div class="col-md-3">
+                                                    <label for="ddlRawmaterialName" class="col-form-label">Raw material Name</label>
+                                                    @Html.DropDownList("ddlRawmaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawmaterialName, "--Select Raw material Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <label for="ddlReturnType" class="control-label">Return Type</label>
+                                                    <select id="ddlReturnType" class="form-control form-control-sm" readonly>
+                                                        <option value="">Select Return Type</option>
+                                                        <option value="Good">Good</option>
+                                                        <option value="Damage">Damage</option>
+                                                    </select>
+                                                </div>*@
+                                            @*<div class="col-md-2">
+                                                <h4>Search by:</h4>
+                                            </div>*@
+                                            <div class="col-md-3 float-right">
+                                                <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
                                             </div>
+
 
                                         </div>
 
@@ -71,7 +78,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div class="col-md-12" id="dataContainer">
-                                            @*@{Html.RenderAction("GetFinishGoodRecipeList", "AgroConfiguration", new { @flag = "View" });}*@
+                                            
                                         </div>
                                     </div>
                                 </div>
@@ -85,23 +92,14 @@
 </div>
 
 
-<div class="modal fade" id="AgroSalesProductDetails" role="dialog" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-header alert-secondary">
-                <h4 id="modalHeading" class="modal-title">Agro Sales Product Details</h4>
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-            </div>
-            <div class="modal-body" id="dataContainer2">
-
-            </div>
-        </div>
-    </div>
-</div>
 @section scripts{
 
 
     <script type="text/javascript">
+
+
+        var searchByAny = $("#searchByAny");
+
 
         $(document).ready(function () {
 
@@ -110,13 +108,23 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
-            LoadRawMaterialReturn()
+            LoadDataTable()
         })
 
-        function LoadRawMaterialReturn() {
+
+
+        function LoadDataInitializer() {
+            LoadDataTable();
+        }
+
+        searchByAny.keyup(function () {
+            LoadDataTable()
+        })
+
+        function LoadDataTable() {
             debugger;
 
-            var data = {id: 0 };
+            var data = { flag: "View", name: $.trim(searchByAny.val()) };
 
             $.when(getReqWithData('html', 'GET', '/AgroConfiguration/RawMaterialReturnList', data)).then(function (res, status) {
                 console.log(status);
@@ -125,11 +133,12 @@
                         $("#dataContainer").empty();
                         $("#dataContainer").append(res).fadeIn('500');
                     });
+
                 }
             }).fail(function (error) {
                 console.log(error);
             });
-
+            //pageNo = 1;
         }
 
     </script>
